fix: APIキーをソースコードから削除

--- a/event_detail.html
+++ b/event_detail.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>イベント詳細</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  <!-- Firebase Hostingが提供する、Firebase設定用のスクリプト -->
+  <script src="/__/firebase/init.js"></script>
 </head>
 <body>
   <div class="main-container">
@@ -29,10 +33,6 @@
     </main>
 
   </div>
-
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
   <script src="event_detail.js"></script>
   <!-- Twitter Widget -->
