--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <!-- Firestore - 互換版（compat）を読み込む -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
 
+  <!-- Firebase Hostingが提供する、Firebase設定用のスクリプト -->
+  <script src="/__/firebase/init.js"></script>
+
   <style>
     /* カレンダーイベントのカスタムスタイル */
     .fc-event-main-content {
