レスポンシブ対応とUI改善

--- a/header.html
+++ b/header.html
@@ -11,4 +11,7 @@
       <li><a href="faq.html">FAQ</a></li>
     </ul>
   </nav>
+  <button class="menu-toggle" aria-label="Open menu">
+    &#9776;
+  </button>
 </header> 
